--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -4,7 +4,7 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database - PostgreSQL
-DATABASE_URL=postgresql://user:password@localhost:5432/workzen_db
+DATABASE_URL=postgresql://postgres:aaravp_2408@localhost:5432/test
 
 # Supabase (Cloud Backup)
 SUPABASE_URL=https://nchmkagauivyowyibako.supabase.co
