--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,9 +3,7 @@ Django==5.2.8
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
 
-# Database
-psycopg2-binary==2.9.10
-dj-database-url==2.3.0
+# Database (SQLite is built-in, no extra packages needed)
 
 # Authentication
 djangorestframework-simplejwt==5.4.0
@@ -20,25 +18,10 @@ celery==5.4.0
 django-celery-beat==2.7.0
 django-celery-results==2.5.1
 
-# ML & Analytics
-scikit-learn==1.6.0
-pandas==2.2.3
-numpy==2.2.1
-textblob==0.18.0.post0
-nltk==3.9.1
-
-# Image Processing (for face verification)
-Pillow==11.0.0
-opencv-python==4.10.0.84
-
 # Utilities
 python-dotenv==1.0.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
-
-# PDF Generation
-reportlab==4.2.5
-weasyprint==63.1
 
 # Cryptography
 cryptography==44.0.0
